cot-macros/tests/ui/func_query_starting_op.stderr
error: expected field, literal, or identifier
  --> tests/ui/func_query_starting_op.rs:16:9
   |
16 |         && $name == "hello"
   |         ^^
